Fix canvas flickering and broken updates on Mac

CanvasResource_GpuMemoryBuffer was not refreshing its
sync token when new content was added, resulting in recycled
buffers never getting their contents flushed.

BUG=795635, 795252
TBR=xlai@chromium.org
NOTRY=true

Cq-Include-Trybots: master.tryserver.blink:linux_trusty_blink_rel;master.tryserver.chromium.linux:linux_layout_tests_slimming_paint_v2
Change-Id: I77a9e2cdba1397a664eda1e46d9126b1e2c8114d
Reviewed-on: https://chromium-review.googlesource.com/832350
Reviewed-by: Justin Novosad <junov@chromium.org>
Commit-Queue: Justin Novosad <junov@chromium.org>
Cr-Commit-Position: refs/heads/master@{#524888}
Former-commit-id: c1fd548f2cf9a3585e82d800cfc40167a48bb582